--- a/CSS/loginpage.css
+++ b/CSS/loginpage.css
@@ -6,7 +6,7 @@
 body {
 
 
-    background-image: url("/IMAGES/Login.jpg");
+    background-image: url("IMAGES/Login.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
