--- a/CSS/Signup.css
+++ b/CSS/Signup.css
@@ -6,7 +6,7 @@
 body {
 
     height: 100%;
-    background-image: url("IMAGES/Signup.jpg");
+    background-image: url("/IMAGES/Signup.jpg");
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
