--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -6,10 +6,9 @@
 
 
 
-.image {
+body {
     height: 60vh;
     width: 100%;
-    background-image: url("/IMAGES/india-kerala-149251808216o.jpeg");
     background-position: center;
     background-size: cover;
 }
