--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -6,11 +6,11 @@
 
 
 
-body {
-    height: 60vh;
+.image {
+    height: 100vh;
     width: 100%;
     background-position: center;
-
+    background-size: cover;
 }
 
 .logo {
@@ -34,4 +34,9 @@ body {
 
     width: 80px;
 
+}
+
+.carousel-inner img {
+    width: 100px;
+    height: 200px;
 }
